Utils : 편의 기능 모음 (Rest 사용 시 필수)