@@ -4,7 +4,6 @@ import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.MessageSource;
 import org.springframework.stereotype.Component;
-import org.springframework.util.StringUtils;
 import org.springframework.validation.Errors;
 import org.springframework.validation.FieldError;
 
@@ -24,7 +23,7 @@ public class Utils { // 편의 기능 모음
         // 1. FieldErrors 처리
         Map<String, List<String>> messages = errors.getFieldErrors()
                                                     .stream()
-                                                    .collect(Collectors.toMap(FieldError::getField, e -> e.getCodeMessages(e.getCode())));
+                                                    .collect(Collectors.toMap(FieldError::getField, e -> getCodeMessages(e.getCodes())));
 
         // 2. GlobalErrors 처리
         List<String> gMessages = errors.getGlobalErrors()
@@ -39,7 +38,7 @@ public class Utils { // 편의 기능 모음
     public List<String > getCodeMessages(String[] codes) {
         List<String> messages = Arrays.stream(codes) // message 를 가져와 바꿔줌
                                         .map(c -> messageSource.getMessage(c, null, request.getLocale())) // 지역화 -> 언어 변동 기능
-                                        .filter(s -> !StringUtils.isBlank(s))
+                                        .filter(s -> s != null && !s.isBlank())
                                         .toList();
 
         return messages;
